--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="darker_red">#7f0000</color>
     <color name="pastel_pink">#ff8a80</color>
     <color name="lighter_pastel_pink">#ffbcaf</color>
+    <color name="semi_black">#5E000000</color>
+    <color name="transparent">#00000000</color>
 </resources>
