--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@android:color/transparent"
-        android:endColor="@color/semi_black"
+        android:startColor="@color/semi_black"
+        android:endColor="@color/black"
         android:angle="90"/>
 </shape>
