--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -4,7 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ResultActivity">
+    tools:context=".ui.result.ResultActivity"
+    android:fitsSystemWindows="true"
+    android:background="@color/black">
+    
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradient_background"
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:background="@color/transparent"
+            android:layout_height="?attr/actionBarSize" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
         android:id="@+id/imgResult"
@@ -23,10 +39,11 @@
         android:layout_gravity="center"
         tools:visibility="visible"/>
 
+
     <LinearLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="550dp"
         android:orientation="vertical"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
@@ -36,21 +53,32 @@
             android:background="@drawable/bottom_sheet_shape">
 
             <View
+                android:id="@+id/btn_bottom_sheet"
                 android:layout_width="40dp"
                 android:layout_height="5dp"
                 android:background="@drawable/scroll_bottom_shape"
-                android:layout_gravity="center|top"
+                android:layout_gravity="top|center"
                 android:layout_marginTop="10dp"/>
 
-            <TextView
-                android:id="@+id/tvResult"
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="@string/display_result"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"/>
+                android:layout_height="match_parent">
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_result"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="18dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"/>
+
+                </RelativeLayout>
+            </androidx.core.widget.NestedScrollView>
         </FrameLayout>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
