--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,4 +11,11 @@
         <item name="windowActionBarOverlay">true</item>
         <item name="titleTextColor">@color/white</item>
     </style>
+
+    <style name="translucentStatusBar" parent="Theme.Meater.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+        <item name="android:statusBarColor">@color/transparent</item>
+        <item name="statusBarForeground">@color/transparent</item>
+    </style>
 </resources>
